--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
     "firebase": "^11.5.0",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.484.0",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
